# implenting-transformer

./: Practical_11.ipynb  README.md  pyproject.toml  requirements.txt
tokenizer_files/: merges.txt  save.json  vocab.json
transformer/: dataset.py
transformer/modelling/components/: attention.py  basefunctions.py  embedding.py  feedforward.py
transformer/modelling/functional/: Transformer.py  TransformerDecoder.py
transformer/modelling/preprocessor/: data_utils.py  dataloader.py  tokenizer.py
transformer/run/: generate.py  optimizers.py  train.py  utils.py
transformer/test/: practical_2_test.py  practical_4_test.py  practical_5_encoder_layer_tests.py  practical_5_mha_tests.py  practical_6.py  test_preprocessory.py  tokenizer_test.py
