[tool.poetry]
name = "transformer"
version = "0.1.0"
description = ""
authors = ["m.khal <m.khal@outlook.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
pytest = "^8.3.3"
tokenizer = "^3.4.5"
tokenizers = "^0.20.1"
transformers = "^4.46.1"
datasets = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
